--- a/OSK_Mobile/OSK_Mobile/Pages/Student/DrivePracticalDetailPage.xaml
+++ b/OSK_Mobile/OSK_Mobile/Pages/Student/DrivePracticalDetailPage.xaml
@@ -5,7 +5,7 @@
 
     <NavigationPage.TitleView>
         <StackLayout Orientation="Horizontal">
-            <Label Text="Szczegóły zajęć praktycznych" FontSize="20" />
+            <Label Text="Szczegóły zajęć praktycznych" FontSize="20" TextColor="White" FontAttributes="Bold" />
         </StackLayout>
     </NavigationPage.TitleView>
 
@@ -19,46 +19,46 @@
                 <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
             <BoxView />
-            <Label VerticalOptions="Center" Text="Data" />
+            <Label VerticalOptions="Center" Text="Data" TextColor="Black" FontAttributes="Bold" />
 
             <BoxView Grid.Column="1" />
-            <Label VerticalOptions="Center" x:Name="data" Grid.Column="1" Text="{Binding Data}" />
+            <Label VerticalOptions="Center" x:Name="data" Grid.Column="1" Text="{Binding Data}"  TextColor="Black" />
 
             <BoxView Grid.Row="1" />
-            <Label VerticalOptions="Center" Grid.Row="1" Text="Godzina zajęć" />
+            <Label VerticalOptions="Center" Grid.Row="1" Text="Godzina zajęć" TextColor="Black" FontAttributes="Bold" />
 
             <BoxView Grid.Row="1" Grid.Column="1" />
-            <Label VerticalOptions="Center" x:Name="startTime" Grid.Row="1" Grid.Column="1" Text="{Binding StartTime}" />
+            <Label VerticalOptions="Center" x:Name="startTime" Grid.Row="1" Grid.Column="1" Text="{Binding StartTime}"  TextColor="Black" />
 
             <BoxView Grid.Row="2" />
-            <Label VerticalOptions="Center" Grid.Row="2" Text="Godzina zakończenia" />
+            <Label VerticalOptions="Center" Grid.Row="2" Text="Godzina zakończenia" TextColor="Black" FontAttributes="Bold" />
 
             <BoxView Grid.Row="2" Grid.Column="1" />
-            <Label VerticalOptions="Center" x:Name="endTime" Grid.Row="2" Grid.Column="1" Text="{Binding EndTime}" />
+            <Label VerticalOptions="Center" x:Name="endTime" Grid.Row="2" Grid.Column="1" Text="{Binding EndTime}"  TextColor="Black" />
 
             <BoxView Grid.Row="3" />
-            <Label VerticalOptions="Center" Grid.Row="3" Text="Instruktor" />
+            <Label VerticalOptions="Center" Grid.Row="3" Text="Instruktor" TextColor="Black" FontAttributes="Bold" />
 
             <BoxView Grid.Row="3" Grid.Column="1" />
-            <Label VerticalOptions="Center" x:Name="employee" Grid.Row="3" Grid.Column="1" Text="{Binding Employee}" />
+            <Label VerticalOptions="Center" x:Name="employee" Grid.Row="3" Grid.Column="1" Text="{Binding Employee}"  TextColor="Black" />
 
             <BoxView Grid.Row="4" />
-            <Label VerticalOptions="Center" Grid.Row="4" Text="Kategoria" />
+            <Label VerticalOptions="Center" Grid.Row="4" Text="Kategoria" TextColor="Black" FontAttributes="Bold" />
 
             <BoxView Grid.Row="4" Grid.Column="1" />
-            <Label VerticalOptions="Center" x:Name="category" Grid.Row="4" Grid.Column="1" Text="{Binding Category}" />
+            <Label VerticalOptions="Center" x:Name="category" Grid.Row="4" Grid.Column="1" Text="{Binding Category}"  TextColor="Black" />
             
             <BoxView Grid.Row="5" />
-            <Label VerticalOptions="Center" Grid.Row="5" Text="Pojazd" />
+            <Label VerticalOptions="Center" Grid.Row="5" Text="Pojazd" TextColor="Black" FontAttributes="Bold" />
 
             <BoxView Grid.Row="5" Grid.Column="1" />
-            <Label VerticalOptions="Center" x:Name="vehicle" Grid.Row="5" Grid.Column="1" Text="{Binding Vehicle}" />
+            <Label VerticalOptions="Center" x:Name="vehicle" Grid.Row="5" Grid.Column="1" Text="{Binding Vehicle}"  TextColor="Black" />
 
             <BoxView Grid.Row="6" />
-            <Label VerticalOptions="Center" Grid.Row="6" Text="Status zajęć" />
+            <Label VerticalOptions="Center" Grid.Row="6" Text="Status zajęć" TextColor="Black" FontAttributes="Bold" />
 
             <BoxView Grid.Row="6" Grid.Column="1" />
-            <Label VerticalOptions="Center" x:Name="status" Grid.Row="6" Grid.Column="1" Text="{Binding Status}" />
+            <Label VerticalOptions="Center" x:Name="status" Grid.Row="6" Grid.Column="1" Text="{Binding Status}"  TextColor="Black" />
 
         </Grid>
 
