--- a/OSK_Mobile/OSK_Mobile/Pages/Student/StudentMainPage.xaml
+++ b/OSK_Mobile/OSK_Mobile/Pages/Student/StudentMainPage.xaml
@@ -6,7 +6,7 @@
 
     <NavigationPage.TitleView>
         <StackLayout Orientation="Horizontal">
-            <Label x:Name="userName" Text="" FontSize="20" />
+            <Label x:Name="userName" Text="" FontSize="20" TextColor="White" FontAttributes="Bold" />
         </StackLayout>
     </NavigationPage.TitleView>
 
@@ -27,7 +27,7 @@
 
             <BoxView />
             <ImageButton
-                BackgroundColor="#BF043055"
+                BackgroundColor="#FF9B47"
                 x:Name="userDataBtn"
                 Source="UserDataIcon.png"
                 Clicked="ShowUserData"/>
@@ -46,7 +46,7 @@
 
             <BoxView Grid.Column="1" />
             <ImageButton Grid.Column="1"
-                BackgroundColor="#BF043055"
+                BackgroundColor="#6CFDF8"
                 x:Name="courseDataBtn"
                 Source="CourseIcon.png"
                 Clicked="ShowUserCourses"/>
@@ -58,18 +58,18 @@
                    />-->
 
             <BoxView Grid.Row="1"  />
-            <Label Grid.Row="1" Text="Dane kursanta" FontSize="18"
+            <Label Grid.Row="1" Text="Dane kursanta" FontSize="18" TextColor="Black" FontAttributes="Bold"
                    HorizontalOptions="Center"
                    VerticalOptions="Center"/>
 
             <BoxView Grid.Row="1" Grid.Column="1" />
-            <Label Grid.Row="1" Grid.Column="1" Text="Twoje kursy" FontSize="18"
+            <Label Grid.Row="1" Grid.Column="1" Text="Twoje kursy" FontSize="18" TextColor="Black" FontAttributes="Bold"
                    HorizontalOptions="Center"
                    VerticalOptions="Center"/>
 
             <BoxView Grid.Row="2"  />
             <ImageButton Grid.Row="2"
-                BackgroundColor="#BF043055"
+                BackgroundColor="#2E9FE7"
                 x:Name="driveDataBtn"
                 Source="DriveIcon.png"
                 Clicked="ShowDrives"/>
@@ -81,24 +81,24 @@
             
             <BoxView Grid.Row="2" Grid.Column="1"/>
             <ImageButton Grid.Row="2" Grid.Column="1"
-                BackgroundColor="#BF043055"
+                BackgroundColor="#3CE321 "
                 x:Name="paymentsBtn"
                 Source="PaymentIcon.png"
                 Clicked="ShowPayments"/>
 
             <BoxView Grid.Row="3"  />
-            <Label Grid.Row="3" Text="Jazdy" FontSize="18"
+            <Label Grid.Row="3" Text="Jazdy" FontSize="18" TextColor="Black" FontAttributes="Bold"
                    HorizontalOptions="Center"
                    VerticalOptions="Center"/>
 
             <BoxView Grid.Row="3" Grid.Column="1" />
-            <Label Grid.Row="3" Grid.Column="1" Text="Wpłaty" FontSize="18"
+            <Label Grid.Row="3" Grid.Column="1" Text="Wpłaty" FontSize="18" TextColor="Black" FontAttributes="Bold"
                    HorizontalOptions="Center"
                    VerticalOptions="Center"/>
             
             <BoxView Grid.Row="4" />
             <ImageButton Grid.Row="4"
-                BackgroundColor="#BF043055"
+                BackgroundColor="#959396"
                 x:Name="settingsBtn"
                 Source="SettingsIcon.png"
                 Clicked="ShowSettings"/>
@@ -110,7 +110,7 @@
 
             <BoxView Grid.Row="4" Grid.Column="1" />
             <ImageButton Grid.Row="4" Grid.Column="1"
-                BackgroundColor="#BF043055"
+                BackgroundColor="#FF3D3D"
                 x:Name="logOutBtn"
                 Source="LogOutIcon.png"
                 Clicked="LogOut"/>
@@ -121,12 +121,12 @@
                    VerticalOptions="Center"   />-->
 
             <BoxView Grid.Row="5"  />
-            <Label Grid.Row="5" Text="Ustawienia" FontSize="18"
+            <Label Grid.Row="5" Text="Ustawienia" FontSize="18" TextColor="Black" FontAttributes="Bold"
                    HorizontalOptions="Center"
                    VerticalOptions="Center"/>
 
             <BoxView Grid.Row="5" Grid.Column="1" />
-            <Label Grid.Row="5" Grid.Column="1" Text="Wyloguj" FontSize="18"
+            <Label Grid.Row="5" Grid.Column="1" Text="Wyloguj" FontSize="18" TextColor="Black" FontAttributes="Bold"
                    HorizontalOptions="Center"
                    VerticalOptions="Center"/>
             
