--- a/OSK_Mobile/OSK_Mobile/Pages/Student/StudentCourseDetailPage.xaml
+++ b/OSK_Mobile/OSK_Mobile/Pages/Student/StudentCourseDetailPage.xaml
@@ -5,7 +5,7 @@
 
     <NavigationPage.TitleView>
         <StackLayout Orientation="Horizontal">
-            <Label x:Name="courseName" Text="Szczegóły kursu" FontSize="20" />
+            <Label x:Name="courseName" Text="Szczegóły kursu" FontSize="20" TextColor="White" FontAttributes="Bold" />
         </StackLayout>
     </NavigationPage.TitleView>
 
@@ -19,52 +19,70 @@
                 <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
             <BoxView />
-            <Label VerticalOptions="Center" Text="Nazwa kursu" />
+            <Label VerticalOptions="Center" Text="Nazwa kursu" FontSize="15" TextColor="Black" FontAttributes="Bold" />
 
             <BoxView Grid.Column="1" />
-            <Label VerticalOptions="Center" x:Name="courseNameTxt" Grid.Column="1" Text="" />
+            <Label VerticalOptions="Center" x:Name="courseNameTxt" Grid.Column="1" Text="" FontSize="15" TextColor="Black" />
 
             <BoxView Grid.Row="1" />
-            <Label VerticalOptions="Center" Grid.Row="1" Text="Kategoria" />
+            <Label VerticalOptions="Center" Grid.Row="1" Text="Kategoria" FontSize="15" TextColor="Black" FontAttributes="Bold" />
 
             <BoxView Grid.Row="1" Grid.Column="1" />
-            <Label VerticalOptions="Center" x:Name="category" Grid.Row="1" Grid.Column="1" Text="" />
+            <Label VerticalOptions="Center" x:Name="category" Grid.Row="1" Grid.Column="1" Text="" FontSize="15" TextColor="Black" />
             
             <BoxView Grid.Row="2" />
-            <Label VerticalOptions="Center" Grid.Row="2" Text="Data rozpoczęcia" />
+            <Label VerticalOptions="Center" Grid.Row="2" Text="Data rozpoczęcia" FontSize="15" TextColor="Black" FontAttributes="Bold" />
 
             <BoxView Grid.Row="2" Grid.Column="1" />
-            <Label VerticalOptions="Center" x:Name="startCourseDate" Grid.Row="2" Grid.Column="1" Text="" />
+            <Label VerticalOptions="Center" x:Name="startCourseDate" Grid.Row="2" Grid.Column="1" Text="" FontSize="15" TextColor="Black" />
 
             <BoxView Grid.Row="3" />
-            <Label VerticalOptions="Center" Grid.Row="3" Text="Data zakończenia" />
+            <Label VerticalOptions="Center" Grid.Row="3" Text="Data zakończenia" FontSize="15" TextColor="Black" FontAttributes="Bold" />
 
             <BoxView Grid.Row="3" Grid.Column="1" />
-            <Label VerticalOptions="Center" x:Name="endCourseDate" Grid.Row="3" Grid.Column="1" Text="" />
+            <Label VerticalOptions="Center" x:Name="endCourseDate" Grid.Row="3" Grid.Column="1" Text="" FontSize="15" TextColor="Black" />
 
             <BoxView Grid.Row="4" />
-            <Label VerticalOptions="Center" Grid.Row="4" Text="Dodatkowe zajęcia" />
+            <Label VerticalOptions="Center" Grid.Row="4" Text="Dodatkowe zajęcia" FontSize="15" TextColor="Black" FontAttributes="Bold" />
 
             <BoxView Grid.Row="4" Grid.Column="1" />
-            <Label VerticalOptions="Center" x:Name="extraHours" Grid.Row="4" Grid.Column="1" Text="" />
+            <Label VerticalOptions="Center" x:Name="extraHours" Grid.Row="4" Grid.Column="1" Text="" FontSize="15" TextColor="Black" />
 
             <BoxView Grid.Row="5" />
-            <Label VerticalOptions="Center" Grid.Row="5" Text="Suma wpłat" />
+            <Label VerticalOptions="Center" Grid.Row="5" Text="Suma wpłat" FontSize="15" TextColor="Black" FontAttributes="Bold" />
 
             <BoxView Grid.Row="5" Grid.Column="1" />
-            <Label VerticalOptions="Center" x:Name="sumOfPayments" Grid.Row="5" Grid.Column="1" Text="" />
+            <Label VerticalOptions="Center" x:Name="sumOfPayments" Grid.Row="5" Grid.Column="1" Text="" FontSize="15" TextColor="Black" />
 
             <BoxView Grid.Row="6" />
-            <Label VerticalOptions="Center" Grid.Row="6" Text="Status uczestnika" />
+            <Label VerticalOptions="Center" Grid.Row="6" Text="Status uczestnika" FontSize="15" TextColor="Black" FontAttributes="Bold" />
 
             <BoxView Grid.Row="6" Grid.Column="1" />
-            <Label VerticalOptions="Center" x:Name="studentCourseStatus" Grid.Row="6" Grid.Column="1" Text="" />
+            <Label VerticalOptions="Center" x:Name="studentCourseStatus" Grid.Row="6" Grid.Column="1" Text="" FontSize="15" TextColor="Black" />
 
             <BoxView Grid.Row="7" />
-            <Label VerticalOptions="Center" Grid.Row="7" Text="Il. zrealizowanych zajęć praktycznych" />
+            <Label VerticalOptions="Center" Grid.Row="7" Text="Il. zrealizowanych zajęć praktycznych" FontSize="15" TextColor="Black" FontAttributes="Bold" />
 
             <BoxView Grid.Row="7" Grid.Column="1" />
-            <Label VerticalOptions="Center" x:Name="countOfCompletedPractical" Grid.Row="7" Grid.Column="1" Text="" />
+            <Label VerticalOptions="Center" x:Name="countOfCompletedPractical" Grid.Row="7" Grid.Column="1" Text="" FontSize="15" TextColor="Black" />
+
+            <BoxView Grid.Row="8" />
+            <Label VerticalOptions="Center" Grid.Row="8" Text="Egzamin wewnętrzny teoretyczny" FontSize="15" TextColor="Black" FontAttributes="Bold" />
+
+            <BoxView Grid.Row="8" Grid.Column="1" />
+            <Label VerticalOptions="Center" x:Name="theoreticalExam" Grid.Row="8" Grid.Column="1" Text="Nie przystąpił" FontSize="15" TextColor="Black" />
+
+            <BoxView Grid.Row="9" />
+            <Label VerticalOptions="Center" Grid.Row="9" Text="Egzamin wewnętrzny praktyczny" FontSize="15" TextColor="Black" FontAttributes="Bold" />
+
+            <BoxView Grid.Row="9" Grid.Column="1" />
+            <Label VerticalOptions="Center" x:Name="practicalExam" Grid.Row="9" Grid.Column="1" Text="Nie przystąpił" FontSize="15" TextColor="Black" />
+
+            <BoxView Grid.Row="10" />
+            <Label VerticalOptions="Center" Grid.Row="10" Text="Szkolenie z zakresu bezpieczeństwa" FontSize="15" TextColor="Black" FontAttributes="Bold" />
+
+            <BoxView Grid.Row="10" Grid.Column="1" />
+            <Label VerticalOptions="Center" x:Name="securityLesson" Grid.Row="10" Grid.Column="1" Text="Nie uczestniczył" FontSize="15" TextColor="Black" />
 
         </Grid>
 
